# docs/swagger.yaml
@@ -28,6 +28,17 @@ definitions:
         type: integer
       is_del:
         type: integer
+      post_id:
+        type: integer
+    type: object
+  model.CommentSwagger:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/model.Comment'
+        type: array
+      pager:
+        $ref: '#/definitions/app.Pager'
     type: object
   model.Post:
     properties:
@@ -69,22 +80,27 @@ info:
   title: forum
   version: "1.0"
 paths:
-  /api/v1/comments:
-    get:
+  /api/v1/comments/:
+    post:
       parameters:
-      - description: post id
-        in: query
-        name: id
+      - description: comment content
+        in: body
+        name: content
         required: true
-        type: integer
-      - description: page number
-        in: query
-        name: page
-        type: integer
-      - description: page size
-        in: query
-        name: page_size
-        type: integer
+        schema:
+          type: string
+      - description: creator id
+        in: body
+        name: created_by
+        required: true
+        schema:
+          type: integer
+      - description: post id
+        in: body
+        name: post_id
+        required: true
+        schema:
+          type: integer
       produces:
       - application/json
       responses:
@@ -100,9 +116,9 @@ paths:
           description: server error
           schema:
             $ref: '#/definitions/errcode.Error'
-      summary: get comment list with post id
+      summary: create comment
   /api/v1/comments/{id}:
-    get:
+    delete:
       parameters:
       - description: comment id
         in: path
@@ -124,54 +140,30 @@ paths:
           description: server error
           schema:
             $ref: '#/definitions/errcode.Error'
-      summary: get comment by id
-  /api/v1/comments/create:
-    post:
+      summary: delete comment need adm cookie
+  /api/v1/comments/{post_id}:
+    get:
       parameters:
-      - description: comment content
-        in: body
-        name: content
-        required: true
-        schema:
-          type: string
-      - description: creator id
-        in: body
-        name: created_by
-        required: true
-        schema:
-          type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success
-          schema:
-            $ref: '#/definitions/model.Comment'
-        "400":
-          description: request error
-          schema:
-            $ref: '#/definitions/errcode.Error'
-        "500":
-          description: server error
-          schema:
-            $ref: '#/definitions/errcode.Error'
-      summary: create comment
-  /api/v1/comments/delete:
-    post:
-      parameters:
-      - description: comment id
-        in: body
+      - description: post id
+        in: path
         name: id
         required: true
-        schema:
-          type: integer
+        type: integer
+      - description: page number
+        in: query
+        name: page
+        type: integer
+      - description: page size
+        in: query
+        name: page_size
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/model.Comment'
+            $ref: '#/definitions/model.CommentSwagger'
         "400":
           description: request error
           schema:
@@ -180,7 +172,7 @@ paths:
           description: server error
           schema:
             $ref: '#/definitions/errcode.Error'
-      summary: delete comment need adm cookie
+      summary: get comment list with post id
   /api/v1/posts:
     get:
       parameters:
